--- a/tick-tack-toe/tick-tack-toe.csproj
+++ b/tick-tack-toe/tick-tack-toe.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LineToDraw.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="Form1.cs">
