--- a/tick-tack-toe/tick-tack-toe.csproj
+++ b/tick-tack-toe/tick-tack-toe.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BotEasy.cs" />
+    <Compile Include="BotHard.cs" />
+    <Compile Include="IBot.cs" />
     <Compile Include="LineToDraw.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Field.cs" />
@@ -55,7 +58,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IPlayer.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TickTackToe.cs" />
